<resources>
    <string name="app_name">SimpleMemoJ</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_delete">This action cannot be reversed. Would you like to continue?</string>
    <string name="no_memo">No Memo</string>
    <string name="sample_memo_title">Sample Memo Title</string>
    <string name="sample_memo_content">Sample Memo Content</string>
    <string name="memo_title">Title</string>
    <string name="memo_content">Content</string>
    <string name="memo_delete">Delete</string>
    <string name="memo_mod">Modify</string>
    <string name="memo_color_chooser_title">Choose Color</string>
    <string name="memo_single_count">&#160;memo</string>
    <string name="memo_multi_count">&#160;memos</string>
    <string name="memo_modified_prefix">Modified:&#160;</string>
    <string name="memo_saved_msg">The note was automatically been saved</string>
    <string name="memo_deleted_msg">The note has been successfully deleted</string>
    <string name="memo_image_deleted_msg">The image has been deleted</string>
    <string name="img_camera">Camera</string>
    <string name="img_storage">Gallery</string>
    <string name="img_web">URL</string>
    <string name="img_web_input">Input URL</string>
    <string name="REQUEST_PERMISSION_NOTIFICATIONS">Permissions are required to use the feature</string>
    <string name="REQUEST_PERMISSION_ACCEPTED">Permission granted</string>
    <string name="REQUEST_PERMISSION_DENIED">You must be authorized to use this feature.</string>
    <string name="error_title">Oops...</string>
    <string name="empty" translatable="false" />
    
    <string-array name="memocolor">
        <item>#00e5ff</item>
        <item>#cddc39</item>
        <item>#ffeb3b</item>
        <item>#f48fb1</item>
        <item>#b39ddb</item>
        <item>#9fa8da</item>
        <item>#90caf9</item>
        <item>#90a4ae</item>
        <item>#ffffff</item>
    </string-array>
    <string name="alert_invalid_url">Please enter a valid URL address</string>
    <string name="error_content">A temporary error has occurred</string>
    <string name="error_refresh">Refresh</string>
</resources>
