...
                android:clipToPadding="false"
                android:paddingBottom="10dp"
                android:scrollbars="none"
                android:overScrollMode="never"/>

            <TextView
                android:id="@+id/memoView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/memo_title"
                android:textStyle="bold"
                android:textSize="25sp"
...
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp" />

            <TextView
                android:id="@+id/memoView_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
...
